  . Added null bytes presence in locale inputs for Locale class. (David Carlier)
  . Added grapheme_levenshtein() function. (Yuya Hamada)
  . Added Locale::addLikelySubtags/Locale::minimizeSubtags to handle
    adding/removing likely subtags to a locale. (David Carlier)
  . Added IntlListFormatter class to format a list of items with a locale
    , operands types and units. (BogdanUngureanu)

- LDAP:
  . Allow ldap_get_option to retrieve global option by allowing NULL for
    connection instance ($ldap). (Remi)

- MySQLi:
  . Fixed bugs GH-17900 and GH-8084 (calling mysqli::__construct twice).
    (nielsdos)

- MySQLnd:
  . Added mysqlnd.collect_memory_statistics to ini quick reference.
    (hauk92)

- Opcache:
  . Fixed ZTS OPcache build on Cygwin. (cmb)
  . Added opcache.file_cache_read_only. (Samuel Melrose)
  . Updated default value of opcache.jit_hot_loop. (Arnaud)

- Output:
  . Fixed calculation of aligned buffer size. (cmb)

- PCRE:
  . Upgraded to pre2lib from 10.44 to 10.45. (nielsdos)
  . Remove PCRE2_EXTRA_ALLOW_LOOKAROUND_BSK from pcre compile options.
    (mvorisek)

- PDO_PGSQL:
  . Added Iterable support for PDO::pgsqlCopyFromArray. (KentarouTakeda)
  . Implement GH-15387 Pdo\Pgsql::setAttribute(PDO::ATTR_PREFETCH, 0) or
    Pdo\Pgsql::prepare(…, [ PDO::ATTR_PREFETCH => 0 ]) make fetch() lazy
    instead of storing the whole result set in memory (Guillaume Outters)

- PDO_SQLITE:
  . throw on null bytes / resolve GH-13952 (divinity76).
  . Implement GH-17321: Add setAuthorizer to Pdo\Sqlite. (nielsdos)

- PGSQL:
  . Added pg_close_stmt to close a prepared statement while allowing
    its name to be reused. (David Carlier)
  . Added Iterable support for pgsql_copy_from. (David Carlier)
  . pg_connect checks if connection_string contains any null byte,
    pg_close_stmt check if the statement contains any null byte.
    (David Carlier)
  . Added pg_service to get the connection current service identifier.
    (David Carlier)

- POSIX: