@@ -98,6 +98,7 @@ PHP                                                                        NEWS
     adding/removing likely subtags to a locale. (David Carlier)
   . Added IntlListFormatter class to format a list of items with a locale
     , operands types and units. (BogdanUngureanu)
+  . Fixed bug GH-18566 ([intl] Weird numeric sort in Collator). (nielsdos)
 
 - LDAP:
   . Allow ldap_get_option to retrieve global option by allowing NULL for
